--- a/Photo Collection/Photo Collection/Storyboards/Base.lproj/Main.storyboard
+++ b/Photo Collection/Photo Collection/Storyboards/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -68,6 +69,7 @@
                                 <connections>
                                     <outlet property="photoImageView" destination="wdq-La-F6q" id="dkQ-pB-0d1"/>
                                     <outlet property="photoLabel" destination="A8N-HN-yMC" id="hv8-aR-Z3L"/>
+                                    <segue destination="scT-9n-fpI" kind="show" identifier="ToEditPhoto" id="nz5-DU-Q41"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -78,12 +80,73 @@
                     </collectionView>
                     <navigationItem key="navigationItem" id="ago-yQ-lCR">
                         <barButtonItem key="leftBarButtonItem" title="Select Theme" id="RTD-IO-px7"/>
-                        <barButtonItem key="rightBarButtonItem" title="Add" id="eL9-Iv-jGu"/>
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="eL9-Iv-jGu">
+                            <connections>
+                                <segue destination="scT-9n-fpI" kind="show" identifier="ToAddPhoto" id="d2e-od-Ase"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9hS-ss-L2W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1039.1304347826087" y="109.82142857142857"/>
+        </scene>
+        <!--Photo Detail View Controller-->
+        <scene sceneID="ijI-zv-pvB">
+            <objects>
+                <viewController id="scT-9n-fpI" customClass="PhotoDetailViewController" customModule="Photo_Collection" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Wes-BP-o47">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nbk-aS-OG7">
+                                <rect key="frame" x="16" y="104" width="382" height="362.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xVk-hH-YoO">
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="286.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="xVk-hH-YoO" secondAttribute="height" multiplier="4:3" id="nDs-Sd-yS4"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oVX-nI-TfZ">
+                                        <rect key="frame" x="0.0" y="294.5" width="382" height="30"/>
+                                        <state key="normal" title="Add Photo"/>
+                                        <connections>
+                                            <action selector="addPhoto:" destination="scT-9n-fpI" eventType="touchUpInside" id="q6b-D4-Zgr"/>
+                                        </connections>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dyt-eI-kTu">
+                                        <rect key="frame" x="0.0" y="332.5" width="382" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="nbk-aS-OG7" firstAttribute="top" secondItem="nyL-eE-P2s" secondAttribute="top" constant="16" id="Jw3-EN-A8L"/>
+                            <constraint firstItem="nbk-aS-OG7" firstAttribute="leading" secondItem="nyL-eE-P2s" secondAttribute="leading" constant="16" id="fRh-iB-qtL"/>
+                            <constraint firstItem="nyL-eE-P2s" firstAttribute="trailing" secondItem="nbk-aS-OG7" secondAttribute="trailing" constant="16" id="m3q-ej-Nbe"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="nyL-eE-P2s"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="otq-Ks-C6t">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="L1a-GG-a83">
+                            <connections>
+                                <action selector="savePhoto:" destination="scT-9n-fpI" id="7oh-J3-22Q"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="photoImageView" destination="xVk-hH-YoO" id="f34-TV-3CZ"/>
+                        <outlet property="titleTextField" destination="dyt-eI-kTu" id="iKg-5c-6Yn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hy4-Pc-EDs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1897" y="110"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tRP-yh-rqO">
@@ -104,4 +167,7 @@
             <point key="canvasLocation" x="258" y="110"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="nz5-DU-Q41"/>
+    </inferredMetricsTieBreakers>
 </document>
