--- a/Photo Collection/Photo Collection/Storyboards/Base.lproj/Main.storyboard
+++ b/Photo Collection/Photo Collection/Storyboards/Base.lproj/Main.storyboard
@@ -19,53 +19,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rJQ-x7-lr1">
-                            <size key="itemSize" width="120" height="140"/>
+                            <size key="itemSize" width="150" height="135"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="16" minY="16" maxX="16" maxY="16"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="peB-OE-wxZ" customClass="PhotosCollectionViewCell" customModule="Photo_Collection" customModuleProvider="target">
-                                <rect key="frame" x="16" y="16" width="120" height="140"/>
+                                <rect key="frame" x="16" y="16" width="150" height="135"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="135"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ddz-bX-nVZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="T7f-ea-mu8">
+                                            <rect key="frame" x="0.0" y="-3" width="150" height="133"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="T7f-ea-mu8">
-                                                    <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
-                                                    <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wdq-La-F6q">
-                                                            <rect key="frame" x="0.0" y="0.0" width="120" height="119.5"/>
-                                                        </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8N-HN-yMC">
-                                                            <rect key="frame" x="0.0" y="119.5" width="120" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                </stackView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wdq-La-F6q">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="112.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="wdq-La-F6q" secondAttribute="height" multiplier="4:3" id="BB5-6h-tZx"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8N-HN-yMC">
+                                                    <rect key="frame" x="0.0" y="112.5" width="150" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="T7f-ea-mu8" secondAttribute="bottom" id="9xN-Gl-5Fa"/>
-                                                <constraint firstAttribute="trailing" secondItem="T7f-ea-mu8" secondAttribute="trailing" id="CJ2-d8-pa8"/>
-                                                <constraint firstItem="T7f-ea-mu8" firstAttribute="top" secondItem="ddz-bX-nVZ" secondAttribute="top" id="TUI-Dw-D2D"/>
-                                                <constraint firstItem="T7f-ea-mu8" firstAttribute="leading" secondItem="ddz-bX-nVZ" secondAttribute="leading" id="gw6-nT-9HZ"/>
-                                            </constraints>
-                                        </view>
+                                        </stackView>
                                     </subviews>
                                 </view>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="ddz-bX-nVZ" secondAttribute="trailing" id="XfW-e1-h1D"/>
-                                    <constraint firstItem="ddz-bX-nVZ" firstAttribute="top" secondItem="peB-OE-wxZ" secondAttribute="top" id="b5U-Ek-uGI"/>
-                                    <constraint firstAttribute="bottom" secondItem="ddz-bX-nVZ" secondAttribute="bottom" id="nro-v8-LHU"/>
-                                    <constraint firstItem="ddz-bX-nVZ" firstAttribute="leading" secondItem="peB-OE-wxZ" secondAttribute="leading" id="xUg-ea-z0N"/>
-                                </constraints>
                                 <connections>
                                     <outlet property="photoImageView" destination="wdq-La-F6q" id="dkQ-pB-0d1"/>
                                     <outlet property="photoLabel" destination="A8N-HN-yMC" id="hv8-aR-Z3L"/>
